update alignment and fixed ClassList

--- a/DND-5E-Easysearch/src/components/Styles.module.css
+++ b/DND-5E-Easysearch/src/components/Styles.module.css
@@ -7,3 +7,9 @@
 .class {
   width: 150px;
 }
+.background {
+  width: 150px;
+}
+.alignment {
+  width: 150px;
+}
